--- a/Bri-tech/Bri-tech/Main.html
+++ b/Bri-tech/Bri-tech/Main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Топливные брикеты Bri-tech</title>
     <link rel="shortcut icon" href="Images/icon.png" type="image/png">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" href="css/Main.css"/>
     <link rel="stylesheet" href="darkassets/css/icons.css">
@@ -19,35 +19,35 @@
 </head>
 <body>
 <div class="HeaderContainer" id="head">
-    <div class="container Elements">
-        <div class="logo col-lg-offset-1 col-md-offset-1  col-sm-offset-1 col-xs-3 col-sm-1 col-md-1 col-lg-1">
-            <img src="Images/templatemo_logo.png" height="135" width="389"/>
+    <div class="container">
+        <div class="logo col-lg-offset-1 col-lg-1 col-md-offset-1 col-md-1 col-sm-2 col-xs-3">
+            <img src="Images/templatemo_logo.png">
         </div>
-        <div class="PhoneNumb col-lg-offset-1 col-md-offset-1 col-xs-offset-1 col-sm-offset-2 col-xs-5 col-sm-5 col-md-2 col-lg-3">
+        <div class="PhoneNumb col-lg-offset-1 col-lg-2 col-md-offset-1 col-md-2 col-sm-offset-1 col-sm-2 col-xs-4">
             <p>+38(066)678-83-40</p>
             <p>+38(098)045-11-39</p>
             <p>+38(093)936-03-70</p>
         </div>
-        <div class="Menu col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-2 col-sm-2 col-md-5 col-lg-5">
+        <div class="Menu col-lg-offset-1 col-lg-6 col-md-offset-1 col-md-6 col-sm-offset-1 col-sm-6 col-xs-4">
             <section class="fancy">
                 <nav id="fun1">
                     <ul>
-                        <li><a href="#" title="Home" onclick="ShowScroll(head)">Домашняя</a></li>
-                        <li><a href="#" title="Blog" onclick="ShowScroll(AllSalesObjects)">Продукция</a></li>
-                        <li><a href="#" title="Work" onclick="ShowScroll(briketdescription)">Описание продукции</a></li>
-                        <li><a href="#" title="Resources" onclick="ShowScroll(Contacts)">Контакты</a></li>
+                        <li><a href="#" onclick="ShowScroll(head)">Домашняя</a></li>
+                        <li><a href="#" onclick="ShowScroll(AllSalesObjects)">Продукция</a></li>
+                        <li style=" min-width:185px "><a href="#" onclick="ShowScroll(briketdescription)">Описание продукции</a></li>
+                        <li><a href="#" onclick="ShowScroll(Contacts)">Контакты</a></li>
                     </ul>
                 </nav>
             </section>
-            <div class="minNavbar col-xs-offset-8 col-sm-offset-9">
-                <i class="zmdi zmdi-menu"></i>
-                <ul class="menu__drop">
-                    <a href="#" title="Home" onclick="ShowScroll(head)">Домашняя</a>
-                    <a href="#" title="Blog" onclick="ShowScroll(AllSalesObjects)">Продукция</a>
-                    <a href="#" title="Work" onclick="ShowScroll(briketdescription)">Описание</a>
-                    <a href="#" title="Resources" onclick="ShowScroll(Contacts)">Контакты</a>
-                </ul>
-            </div>
+        </div>
+        <div class="AdaptiveNav col-sm-offset-1 col-sm-1">
+            <i class="minNavbar zmdi zmdi-menu"></i>
+            <ul class="menu__drop">
+                <a href="#" title="Home" onclick="ShowScroll(head)">Домашняя</a>
+                <a href="#" title="Blog" onclick="ShowScroll(AllSalesObjects)">Продукция</a>
+                <a href="#" title="Work" onclick="ShowScroll(briketdescription)">Описание</a>
+                <a href="#" title="Resources" onclick="ShowScroll(Contacts)">Контакты</a>
+            </ul>
         </div>
     </div>
 </div>
@@ -117,9 +117,9 @@
                     <div class="ch-info-front">
                         <div class="Beforehover">
                             <div class="ImageS">
-                                <img class="jpg" src="Images/bricks1.jpg"/></div>
+                                <img class="jpg" src="Images/BioBriks.png"/></div>
                             <div class="TextS">
-                                <h4>Брикеты с биомассы</h4>
+                                <h3>Брикеты с биомассы</h3>
                             </div>
                         </div>
                     </div>
@@ -127,6 +127,13 @@
                         <h3>Брикеты с биомассы</h3>
                         <p>Длина брикета - 150 мм. Диаметр - 50мм. Влажность - 13-14% Зольность - 3.5% Плотность - 1,2
                             тонн/м3 Теплотворная способность 1 кг - 4.6 кВт/час </p>
+                        <div class="Price">
+                            <p class="text-right" style="font-family: 'Courier New', Courier, monospace;
+    font-size: 18px;
+    font-weight: 700;
+    text-shadow: 1px 0px 1px rgba(0,0,0,1);
+">Цена: 1800грн/т</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -140,9 +147,9 @@
                     <div class="ch-info-front">
                         <div class="Beforehover">
                             <div class="ImageS">
-                                <img class="jpg" src="Images/bricks2.jpg"/></div>
+                                <img class="jpg" src="Images/NestroBriks.png"/></div>
                             <div class="TextS">
-                                <h4>"Nestro" брикеты</h4>
+                                <h3>"Nestro" брикеты</h3>
                             </div>
                         </div>
                     </div>
@@ -150,7 +157,7 @@
                         <h3>"Nestro" брикеты</h3>
                         <p>Брикет древсный Нестро (Nestro) ДУБ 80 %, 20 % хвоя. Диаметр: 70 мм Длина: 5-20 см Зольность:
                             1,3 % Влажность: 8 % Теплота сгорания: 4300-5000 Ккал/кг Материал: Дерево (Дуб 80%, хвоя 20
-                            %) Фасовка: мешки по 30 кг.</p>
+                            %) Фасовка: мешки по 30 кг.</p> 2500/т
                     </div>
                 </div>
             </div>
@@ -163,9 +170,9 @@
                     <div class="ch-info-front">
                         <div class="Beforehover">
                             <div class="ImageS">
-                                <img class="jpg" src="Images/bricks3.jpg"/></div>
+                                <img class="jpg" src="Images/PiniKayBriks.png"/></div>
                             <div class="TextS">
-                                <h4>Брикеты "Pini kay"</h4>
+                                <h3>Брикеты "Pini kay"</h3>
                             </div>
                         </div>
                     </div>
@@ -173,7 +180,7 @@
                         <h3>Брикеты Pini kay</h3>
                         <p>Брикет древсный пини-кей (pini-kay) Диаметр: 60 мм Длина: 15-20 см Зольность: 1 % Влажность:
                             7,3 % Теплота сгорания: 4500-5000 Ккал/кг Материал: Дерево (дуб+ясень) Фасовка: Поддон 910
-                            кг</p>
+                            кг</p>3к
                     </div>
                 </div>
             </div>
@@ -186,16 +193,16 @@
                     <div class="ch-info-front">
                         <div class="Beforehover">
                             <div class="ImageS">
-                                <img class="jpg" src="Images/bricks4.jpg"/></div>
+                                <img class="jpg" src="Images/RufBriks.png"/></div>
                             <div class="TextS">
-                                <h4>Брикеты "Ruf"</h4>
+                                <h3>Брикеты "Ruf"</h3>
                             </div>
                         </div>
                     </div>
                     <div class="ch-info-back">
                         <h3>Брикеты "Ruf"</h3>
                         <p>Топливный брикет RUF — евродрова («кирпичик»). Размеры: 155 x 65 x 105 мм. Влажность: 8-10%.
-                            Зольность: менее 1%. Теплотворность: 4200 Ккал/кг.</p>
+                            Зольность: менее 1%. Теплотворность: 4200 Ккал/кг.</p>3200
                     </div>
                 </div>
             </div>
@@ -210,13 +217,13 @@
                             <div class="ImageS">
                                 <img class="jpg" src="Images/bricks5.jpg"/></div>
                             <div class="TextS">
-                                <h4>Уголь</h4>
+                                <h3>Уголь</h3>
                             </div>
                         </div>
                     </div>
                     <div class="ch-info-back">
                         <h3>Уголь</h3>
-                        <p>Уголь антрацит по 30 кг.</p>
+                        <p>Уголь антрацит по 30 кг.</p>5500
                     </div>
                 </div>
             </div>
@@ -231,7 +238,7 @@
                             <div class="ImageS">
                                 <img class="jpg" src="Images/bricks6.jpg"/></div>
                             <div class="TextS">
-                                <h5 style="font-weight: 600">Котел Энергия Комфорт 12кВт</h5>
+                                <h4>Котел Энергия Комфорт 12кВт</h4>
                             </div>
                         </div>
                     </div>
@@ -254,7 +261,7 @@
                             <div class="ImageS">
                                 <img class="jpg" src="Images/bricks7.jpg"/></div>
                             <div class="TextS">
-                                <h5 style="font-weight: 600">Котел Энергия Комфорт 15кВт</h5>
+                                <h4>Котел Энергия Комфорт 15кВт</h4>
                             </div>
                         </div>
                     </div>
@@ -277,7 +284,7 @@
                             <div class="ImageS">
                                 <img class="jpg" src="Images/bricks8.jpg"/></div>
                             <div class="TextS">
-                                <h5 style="font-weight: 600">Котел Энергия Комфорт 18кВт</h5>
+                                <h4>Котел Энергия Комфорт 18кВт</h4>
                             </div>
                         </div>
                     </div>
@@ -300,7 +307,7 @@
                             <div class="ImageS">
                                 <img class="jpg" src="Images/bricks9.jpg"/></div>
                             <div class="TextS">
-                                <h5 style="font-weight: 600">Котел Энергия Комфорт 25кВт</h5>
+                                <h4>Котел Энергия Комфорт 25кВт</h4>
                             </div>
                         </div>
                     </div>
@@ -323,7 +330,7 @@
                             <div class="ImageS">
                                 <img class="jpg" src="Images/bricks10.jpg"/></div>
                             <div class="TextS">
-                                <h5 style="font-weight: 600">Котел Энергия Комфорт 40кВт</h5>
+                                <h4>Котел Энергия Комфорт 40кВт</h4>
                             </div>
                         </div>
                     </div>
@@ -404,7 +411,8 @@
 <div class="Contacts" id="Contacts">
     <div class="Ft1">
         <h2 class="text-left">О Bri-tech</h2>
-        <p style="border-left: 4px solid #0b0b0b; padding-left: 10px; font-size: 1.3em">Наша компания занимается производством и
+        <p style="border-left: 4px solid #0b0b0b; padding-left: 10px; font-size: 1.3em">Наша компания занимается
+            производством и
             продажей высококачественных твердотоплевных брикетов.</p>
     </div>
     <div class="Ft2">
@@ -423,9 +431,12 @@
         <i class="zmdi zmdi-pin" style="font-size: 3em"></i>
         <p class="Ft3Text">Украина. Кировоградская область. Кировоград</p>
         <i class="zmdi zmdi-phone" style="font-size: 3em; margin-top: 40px;"></i>
-        <p style=" font-weight: 700; font-size: 22px; color:#052f15;  margin-left: 60px; margin-top:-55px;"> +38(066)678-83-40 </p>
-        <p style="font-weight: 700; font-size: 22px; color:#052f15;  margin-left: 60px; margin-top:-15px"> +38(098)045-11-39 </p>
-        <p style="font-weight: 700; font-size: 22px; color:#052f15;  margin-left: 60px; margin-top:-15px"> +38(093)936-03-70 </p>
+        <p style=" font-weight: 700; font-size: 22px; color:#052f15;  margin-left: 60px; margin-top:-55px;">
+            +38(066)678-83-40 </p>
+        <p style="font-weight: 700; font-size: 22px; color:#052f15;  margin-left: 60px; margin-top:-15px">
+            +38(098)045-11-39 </p>
+        <p style="font-weight: 700; font-size: 22px; color:#052f15;  margin-left: 60px; margin-top:-15px">
+            +38(093)936-03-70 </p>
         <i class="zmdi zmdi-globe" style="font-size: 3em; margin-top: 20px;"></i><a href="http://bri-tech.prom.ua"><p
             class="Ft3Atag"> http://bri-tech.prom.ua</p></a>
 
