Production container improved

--- a/Bri-tech/Bri-tech/Main.html
+++ b/Bri-tech/Bri-tech/Main.html
@@ -34,7 +34,8 @@
                     <ul>
                         <li><a href="#" onclick="ShowScroll(head)">Домашняя</a></li>
                         <li><a href="#" onclick="ShowScroll(AllSalesObjects)">Продукция</a></li>
-                        <li style=" min-width:185px "><a href="#" onclick="ShowScroll(briketdescription)">Описание продукции</a></li>
+                        <li style=" min-width:185px "><a href="#" onclick="ShowScroll(briketdescription)">Описание
+                            продукции</a></li>
                         <li><a href="#" onclick="ShowScroll(Contacts)">Контакты</a></li>
                     </ul>
                 </nav>
@@ -124,15 +125,18 @@
                         </div>
                     </div>
                     <div class="ch-info-back">
-                        <h3>Брикеты с биомассы</h3>
-                        <p>Длина брикета - 150 мм. Диаметр - 50мм. Влажность - 13-14% Зольность - 3.5% Плотность - 1,2
-                            тонн/м3 Теплотворная способность 1 кг - 4.6 кВт/час </p>
-                        <div class="Price">
-                            <p class="text-right" style="font-family: 'Courier New', Courier, monospace;
-    font-size: 18px;
-    font-weight: 700;
-    text-shadow: 1px 0px 1px rgba(0,0,0,1);
-">Цена: 1800грн/т</p>
+                        <div class="HoverBK">
+                            <div class="Hover1"><h3>Брикеты с биомассы</h3></div>
+                            <div class="Hover2"><p>Длина брикета - 150 мм. Диаметр - 50мм. Влажность - 13-14% Зольность
+                                - 3.5% Плотность -
+                                1,2
+                                тонн/м3 Теплотворная способность 1 кг - 4.6 кВт/час </p>
+                                <p></p>
+                            </div>
+                            <div class="Hover3">
+                                <div class="Price">
+                                    <p class="text-right" >Цена: 1800грн/т</p></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -154,10 +158,21 @@
                         </div>
                     </div>
                     <div class="ch-info-back">
-                        <h3>"Nestro" брикеты</h3>
-                        <p>Брикет древсный Нестро (Nestro) ДУБ 80 %, 20 % хвоя. Диаметр: 70 мм Длина: 5-20 см Зольность:
-                            1,3 % Влажность: 8 % Теплота сгорания: 4300-5000 Ккал/кг Материал: Дерево (Дуб 80%, хвоя 20
-                            %) Фасовка: мешки по 30 кг.</p> 2500/т
+                        <div class="HoverBK">
+                            <div class="Hover1"><h3>"Nestro" брикеты</h3>
+                            </div>
+                            <div class="Hover2"><p>Брикет древсный Нестро (Nestro) ДУБ 80 %, 20 % хвоя. Диаметр: 70 мм
+                                Длина: 5-20 см
+                                Зольность:
+                                1,3 % Влажность: 8 % Теплота сгорания: 4300-5000 Ккал/кг Материал: Дерево (Дуб 80%, хвоя
+                                20
+                                %) Фасовка: мешки по 30 кг.</p>                                <p></p>
+                            </div>
+                            <div class="Hover3">
+                                <div class="Price">
+                                    <p class="text-right">Цена: 2500грн/т</p></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -177,10 +192,19 @@
                         </div>
                     </div>
                     <div class="ch-info-back">
-                        <h3>Брикеты Pini kay</h3>
-                        <p>Брикет древсный пини-кей (pini-kay) Диаметр: 60 мм Длина: 15-20 см Зольность: 1 % Влажность:
-                            7,3 % Теплота сгорания: 4500-5000 Ккал/кг Материал: Дерево (дуб+ясень) Фасовка: Поддон 910
-                            кг</p>3к
+                        <div class="HoverBK">
+                            <div class="Hover1"><h3>Брикеты Pini kay</h3></div>
+                            <div class="Hover2"><p>Брикет древсный пини-кей (pini-kay) Диаметр: 60 мм Длина: 15-20 см
+                                Зольность: 1 %
+                                Влажность:
+                                7,3 % Теплота сгорания: 4500-5000 Ккал/кг Материал: Дерево (дуб+ясень) Фасовка: Поддон
+                                910
+                                кг</p>                                <p></p>
+                            </div>
+                            <div class="Hover3"><p class="text-right">Цена: 3000грн/т</p></div>
+
+
+                        </div>
                     </div>
                 </div>
             </div>
@@ -200,9 +224,17 @@
                         </div>
                     </div>
                     <div class="ch-info-back">
-                        <h3>Брикеты "Ruf"</h3>
-                        <p>Топливный брикет RUF — евродрова («кирпичик»). Размеры: 155 x 65 x 105 мм. Влажность: 8-10%.
-                            Зольность: менее 1%. Теплотворность: 4200 Ккал/кг.</p>3200
+                        <div class="HoverBK">
+                            <div class="Hover1"><h3>Брикеты "Ruf"</h3></div>
+                            <div class="Hover2"><p>Топливный брикет RUF — евродрова («кирпичик»). Размеры: 155 x 65 x
+                                105 мм. Влажность:
+                                8-10%.
+                                Зольность: менее 1%. Теплотворность: 4200 Ккал/кг.</p>                                <p></p>
+                            </div>
+                            <div class="Hover3"><p class="text-right">Цена: 3200грн/т</p></div>
+
+
+                        </div>
                     </div>
                 </div>
             </div>
@@ -215,15 +247,23 @@
                     <div class="ch-info-front">
                         <div class="Beforehover">
                             <div class="ImageS">
-                                <img class="jpg" src="Images/bricks5.jpg"/></div>
+                                <div class="Immggmgm">
+                                    <img class="jpg" src="Images/bricks5.png"/></div>
+                            </div>
                             <div class="TextS">
                                 <h3>Уголь</h3>
                             </div>
                         </div>
                     </div>
                     <div class="ch-info-back">
-                        <h3>Уголь</h3>
-                        <p>Уголь антрацит по 30 кг.</p>5500
+                        <div class="HoverBK">
+                            <div class="Hover1"><h3>Уголь</h3></div>
+                            <div class="Hover2"><p>Уголь антрацит по 30 кг.</p>                                <p></p>
+                            </div>
+                            <div class="Hover3"><p class="text-right">Цена: 5500грн/т</p></div>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
@@ -236,17 +276,24 @@
                     <div class="ch-info-front">
                         <div class="Beforehover">
                             <div class="ImageS">
-                                <img class="jpg" src="Images/bricks6.jpg"/></div>
+                                <img class="jpg" src="Images/bricks6.png"/></div>
                             <div class="TextS">
                                 <h4>Котел Энергия Комфорт 12кВт</h4>
                             </div>
                         </div>
                     </div>
                     <div class="ch-info-back">
-                        <h3>Котел Энергия Комфорт 12 кВт</h3>
-                        <p>Cверх длительное горение на одной загрузке(до 20 суток). Непрерывность процесса горения при
-                            дозагрузке топлива. Розжиг котла - один раз в сезон. Простота монтажа и обслуживания.
-                            Электронное управление процессом горения.</p>
+                        <div class="HoverBK">
+                            <div class="Hover1"><h4>Котел Энергия Комфорт 12 кВт</h4></div>
+                            <div class="Hover2"><p>Cверх длительное горение на одной загрузке(до 20 суток).
+                                Непрерывность процесса горения при
+                                дозагрузке топлива. Розжиг котла - один раз в сезон. Простота монтажа и обслуживания.
+                                Электронное управление процессом горения.</p>                                <p></p>
+                            </div>
+                            <div class="Hover3"><p class="text-right">Цена: 17600грн</p></div>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
@@ -259,18 +306,25 @@
                     <div class="ch-info-front">
                         <div class="Beforehover">
                             <div class="ImageS">
-                                <img class="jpg" src="Images/bricks7.jpg"/></div>
+                                <img class="jpg" src="Images/bricks7.png"/></div>
                             <div class="TextS">
                                 <h4>Котел Энергия Комфорт 15кВт</h4>
                             </div>
                         </div>
                     </div>
                     <div class="ch-info-back">
-                        <h3>Котел Энергия Комфорт 15 кВт</h3>
-                        <p>Cверх длительное горение на одной загрузке(до 20 суток). Непрерывность процесса горения при
-                            дозагрузке топлива. Розжиг котла - один раз в сезон. Простота монтажа и обслуживания.
-                            Электронное управление процессом горения.</p>
+                        <div class="HoverBk">
+                            <div class="Hover1"><h4>Котел Энергия Комфорт 15 кВт</h4></div>
+                            <div class="Hover2"><p>Cверх длительное горение на одной загрузке(до 20 суток).
+                                Непрерывность процесса горения при
+                                дозагрузке топлива. Розжиг котла - один раз в сезон. Простота монтажа и обслуживания.
+                                Электронное управление процессом горения.</p>                                <p></p>
+                            </div>
+                            <div class="Hover3"><p class="text-right">Цена: 18700грн</p></div>
+                        </div>
                     </div>
+
+
                 </div>
             </div>
         </div>
@@ -282,17 +336,23 @@
                     <div class="ch-info-front">
                         <div class="Beforehover">
                             <div class="ImageS">
-                                <img class="jpg" src="Images/bricks8.jpg"/></div>
+                                <img class="jpg" src="Images/bricks8.png"/></div>
                             <div class="TextS">
                                 <h4>Котел Энергия Комфорт 18кВт</h4>
                             </div>
                         </div>
                     </div>
                     <div class="ch-info-back">
-                        <h3>Котел Энергия Комфорт 18 кВт</h3>
-                        <p>Cверх длительное горение на одной загрузке(до 20 суток). Непрерывность процесса горения при
-                            дозагрузке топлива. Розжиг котла - один раз в сезон. Простота монтажа и обслуживания.
-                            Электронное управление процессом горения.</p>
+                        <div class="HoverBK">
+                            <div class="Hover1"><h4>Котел Энергия Комфорт 18 кВт</h4></div>
+                            <div class="Hover2"><p>Cверх длительное горение на одной загрузке(до 20 суток).
+                                Непрерывность
+                                процесса горения при
+                                дозагрузке топлива. Розжиг котла - один раз в сезон. Простота монтажа и обслуживания.
+                                Электронное управление процессом горения.</p>                                <p></p>
+                            </div>
+                            <div class="Hover3"><p class="text-right">Цена: 22900грн</p></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -302,20 +362,26 @@
         <div class="ch-item">
             <div class="ch-info-wrap">
                 <div class="ch-info">
-                    <div class="ch-info-front">
+                    <div class="in-front-of">
                         <div class="Beforehover">
                             <div class="ImageS">
-                                <img class="jpg" src="Images/bricks9.jpg"/></div>
+                                <img class="jpg" src="Images/bricks9.png"/></div>
                             <div class="TextS">
                                 <h4>Котел Энергия Комфорт 25кВт</h4>
                             </div>
                         </div>
                     </div>
                     <div class="ch-info-back">
-                        <h3>Котел Энергия Комфорт 25 кВт</h3>
-                        <p>Cверх длительное горение на одной загрузке(до 20 суток). Непрерывность процесса горения при
-                            дозагрузке топлива. Розжиг котла - один раз в сезон. Простота монтажа и обслуживания.
-                            Электронное управление процессом горения.</p>
+                        <div class="HoverBK">
+                            <div class="Hover1"><h4>Котел Энергия Комфорт 25 кВт</h4></div>
+                            <div class="Hover2"><p>Cверх длительное горение на одной загрузке(до 20 суток).
+                                Непрерывность
+                                процесса горения при
+                                дозагрузке топлива. Розжиг котла - один раз в сезон. Простота монтажа и обслуживания.
+                                Электронное управление процессом горения.</p>                                <p></p>
+                            </div>
+                            <div class="Hover3"><p class="text-right">Цена: 28700грн</p></div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -335,10 +401,16 @@
                         </div>
                     </div>
                     <div class="ch-info-back">
-                        <h3>Котел Энергия Комфорт 40 кВт</h3>
-                        <p>Cверх длительное горение на одной загрузке(до 20 суток). Непрерывность процесса горения при
-                            дозагрузке топлива. Розжиг котла - один раз в сезон. Простота монтажа и обслуживания.
-                            Электронное управление процессом горения.</p>
+                        <div class="HoverBK">
+                            <div class="Hover1"><h4>Котел Энергия Комфорт 40 кВт</h4></div>
+                            <div class="Hover2"><p>Cверх длительное горение на одной загрузке(до 20 суток).
+                                Непрерывность
+                                процесса горения при
+                                дозагрузке топлива. Розжиг котла - один раз в сезон. Простота монтажа и обслуживания.
+                                Электронное управление процессом горения.</p>                                <p></p>
+                            </div>
+                            <div class="Hover3"><p class="text-right">Цена: 30900грн</p></div>
+                        </div>
                     </div>
                 </div>
             </div>
